--- a/style.css
+++ b/style.css
@@ -117,3 +117,8 @@ border-radius: 30px;
 .conteudo-principal-conteplado-texto{
     margin-right: 10px;
 }
+
+.h1cursos{
+    margin: 30px;
+    font-size: 40px;
+}
