--- a/style.css
+++ b/style.css
@@ -84,41 +84,20 @@ border-radius: 30px;
 
 .img-conteplado{
     max-width: 200px;
-    padding: 20px;
     margin: 0 auto;
     background: rgb(243, 241, 241);
 }
 
-.conteudo-conteplado{
+.h1-form {
+    margin: 0 auto;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    text-decoration: none; 
+    align-items: center;
     background: rgb(243, 241, 241);
-}
-
-.img-estudante{
-    max-width: 500px;
-   
+    margin-bottom: 10px;
 }
 
 .conteudo-principal-conteplado{
-    margin:20px 30px;
     display: flex;
-    align-items: center;    
-}
-
-.conteudo-conteplado-conteudo{ 
-    font-size: 20px;
-    color: black;
-    background: rgb(243, 241, 241);
-}
-
-.conteudo-principal-conteplado-texto{
-    margin-right: 10px;
-}
-
-.h1cursos{
-    margin: 30px;
-    font-size: 40px;
+    align-items: center;
+    margin: 30px
 }
