--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     text-decoration: none;
-    background-color: rgba(247, 251, 253, 0.384);
+   
    
 }
 
@@ -91,7 +91,8 @@ border-radius: 30px;
     display: flex;
     flex-direction: column;
     background: rgb(243, 241, 241);
-   
+    margin-bottom: solid black 1px;
+      
    
 }
 
